# my_homework_programming_with_cpp

./: README.md
dragon/: CMakeLists.txt
dragon/include/: Dragon.h
dragon/src/: Dragon.cpp  main.cpp
my_angle_project/: CMakeLists.txt
my_angle_project/example/: main.cpp
my_angle_project/include/angle/: angle.hpp  conversions.hpp  degrees.hpp  radians.hpp
my_angle_project/test/: angle_test.cpp
my_bitcal/: bitcalc.cpp
my_bitcal/output/: bitcalc
